--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">易生活</string>
     <string name="share_to">分享至…</string>
+    <string name="startNewLife">开启全新的一天</string>
     <!--Login-->
     <string name="login">登录</string>
     <string name="account">手机号</string>
@@ -8,8 +9,10 @@
     <string name="forgetPwd">忘记密码</string>
     <string name="register">没有账号?去注册吧</string>
     <string name="social_login">社交账号登录</string>
-
-    <string name="startNewLife">开启全新的一天</string>
+    <string name="input_userName">请输入用户名</string>
+    <string name="input_pwd">请输入密码</string>
+    <string name="account_erroe">用户名错误</string>
+    <string name="pwd_error">密码错误</string>
 
     <string name="register_title">注册账号</string>
     <string name="register_phone">请输入手机号</string>
